--- a/menu/package.json
+++ b/menu/package.json
@@ -28,6 +28,8 @@
   },
   "description": "",
   "dependencies": {
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
     "styled-components": "^2.4.0"
   }
 }
