--- a/menu/package.json
+++ b/menu/package.json
@@ -30,5 +30,7 @@
     "vinyl-source-stream": "^1.1.0"
   },
   "description": "",
-  "dependencies": {}
+  "dependencies": {
+    "react-router-dom": "^4.2.2"
+  }
 }
