--- a/menu/package.json
+++ b/menu/package.json
@@ -1,36 +1,35 @@
 {
-  "name": "navmenu",
+  "name": "menu",
   "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
+  "description": "",
+  "main": "index.jsx",
   "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-plugin-transform-class-properties": "6.24.1",
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "6.24.1",
-    "babelify": "^7.3.0",
-    "browserify": "^14.3.0",
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-connect": "^5.0.0",
-    "gulp-less": "^3.3.0",
-    "gulp-sourcemaps": "^2.5.1",
-    "gulp-util": "^3.0.8",
-    "gulp-watch": "^4.3.11",
-    "react": "^15.5.3",
-    "react-dom": "^15.5.3",
-    "react-redux": "^5.0.6",
+    "babel-preset-stage-0": "^6.24.1",
+    "json-loader": "^0.5.7",
+    "react": "^16.3.1",
+    "react-dom": "^16.4.0",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
-    "styled-components": "^2.4.0",
-    "vinyl-source-stream": "^1.1.0"
+    "styled-components": "^3.2.5",
+    "webpack": "^4.10.2",
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.3"
   },
-  "description": "",
-  "dependencies": {
-    "react-router-dom": "^4.2.2"
-  }
+  "scripts": {
+    "watch": "webpack -d --watch",
+    "start": "webpack-dev-server",
+    "prod": "webpack -p"
+  },
+  "author": "Andrey Alekseev",
+  "license": "ISC",
+  "dependencies": {}
 }
