--- a/menu/package.json
+++ b/menu/package.json
@@ -13,6 +13,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "file-loader": "^1.1.11",
     "json-loader": "^0.5.7",
     "react": "^16.3.1",
     "react-dom": "^16.4.0",
