--- a/menu/package.json
+++ b/menu/package.json
@@ -1,36 +1,49 @@
 {
   "name": "menu",
   "version": "1.0.0",
-  "description": "",
+  "description": "<h1>Personal portfolio by Andrey Alexeev</h1>",
   "main": "index.jsx",
   "devDependencies": {
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
+    "babel-loader": "^8.0.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "file-loader": "^1.1.11",
+    "file-loader": "^3.0.1",
+    "html-webpack-plugin": "^3.2.0",
     "json-loader": "^0.5.7",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-redux": "^5.1.1",
-    "react-router-dom": "^4.3.1",
-    "redux": "^3.7.2",
-    "styled-components": "^3.4.10",
+    "react-redux": "^7.0.2",
+    "react-router-dom": "^5.0.0",
+    "redux": "^4.0.1",
+    "styled-components": "^4.2.0",
+    "typescript": "^3.4.4",
     "webpack": "^4.30.0",
-    "webpack-cli": "^2.1.5",
+    "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.3.1"
   },
   "scripts": {
-    "watch": "webpack -d --watch",
-    "start": "webpack-dev-server",
-    "prod": "webpack -p"
+    "webpack": "webpack",
+    "debug": "node --inspect --inspect-brk ./node_modules/webpack/bin/webpack",
+    "prod": "npm run webpack -- --env.mode production",
+    "dev": "npm run webpack -- --env.mode development --watch",
+    "prod:debug": "npm run debug -- --env.mode production",
+    "dev:debug": "npm run debug -- --env.mode development"
   },
   "author": "Andrey Alekseev",
   "license": "ISC",
-  "dependencies": {}
+  "dependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/alekseos/shelter.git"
+  },
+  "bugs": {
+    "url": "https://github.com/alekseos/shelter/issues"
+  },
+  "homepage": "https://github.com/alekseos/shelter#readme"
 }
