--- a/menu/package.json
+++ b/menu/package.json
@@ -2,11 +2,13 @@
   "name": "menu",
   "version": "1.0.0",
   "description": "<h1>Personal portfolio by Andrey Alexeev</h1>",
-  "main": "index.jsx",
+  "main": "index.tsx",
   "devDependencies": {
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.5",
+    "babel-loader": "^7.1.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
     "babel-preset-env": "^1.7.0",
@@ -15,7 +17,9 @@
     "babel-preset-stage-0": "^6.24.1",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "install": "^0.12.2",
     "json-loader": "^0.5.7",
+    "npm": "^6.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.2",
