--- a/menu/package.json
+++ b/menu/package.json
@@ -32,6 +32,7 @@
     "webpack-dev-server": "^3.3.1"
   },
   "scripts": {
+    "webpack-dev-server": "webpack-dev-server",
     "webpack": "webpack",
     "debug": "node --inspect --inspect-brk ./node_modules/webpack/bin/webpack",
     "prod": "npm run webpack -- --env.mode production",
