--- a/menu/.babelrc
+++ b/menu/.babelrc
@@ -1,8 +1,8 @@
 {
   "presets": [
     "@babel/preset-env",
-    "@babel/react",
-    "@babel/typescript"
+    "@babel/preset-react",
+    "@babel/preset-typescript"
   ],
   "plugins": [
     "transform-class-properties"
