--- a/menu/package.json
+++ b/menu/package.json
@@ -20,6 +20,7 @@
     "babel-loader": "^8.0.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^3.2.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "install": "^0.12.2",
@@ -31,7 +32,9 @@
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
     "styled-components": "^4.2.0",
+    "ts-loader": "^6.2.0",
     "typescript": "^3.4.4",
+    "uglify-js-plugin": "0.0.6",
     "url-loader": "^1.1.2",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0",
