--- a/menu/tsconfig.json
+++ b/menu/tsconfig.json
@@ -1,22 +1,28 @@
 {
-  "compileOnSave": false,
   "compilerOptions": {
-    "target": "es5",
-    "sourceMap": true,
-    "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
     "jsx": "react",
+    "module": "commonjs",
+    "noImplicitAny": true,
+    "outDir": "./dist/",
+    "preserveConstEnums": true,
+    "removeComments": true,
+    "sourceMap": true,
+    "target": "es5",
+    "experimentalDecorators": true,
     "typeRoots": [
-      "Application/typings",
+      "src/typings",
        "node_modules/@types"
     ],
-    "baseUrl": "./Application",
+    "baseUrl": "./src",
     "lib": [
       "es5", 
       "es2015", 
       "es2017", 
       "dom"
     ],
-    "moduleResolution": "node"
   },
-  "no-var-requires": true
+  "include": [
+    "./src/**/*"
+  ]
 }
