--- a/menu/package.json
+++ b/menu/package.json
@@ -19,7 +19,9 @@
     "babel": "^6.23.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-typescript": "^7.0.0-alpha.19",
     "css-loader": "^3.2.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
