--- a/menu/package.json
+++ b/menu/package.json
@@ -25,6 +25,7 @@
     "css-loader": "^3.2.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "html-webpack-root-plugin": "^0.10.0",
     "install": "^0.12.2",
     "json-loader": "^0.5.7",
     "npm": "^6.9.0",
@@ -47,10 +48,10 @@
     "webpack-dev-server": "webpack-dev-server",
     "webpack": "webpack",
     "debug": "node --inspect --inspect-brk ./node_modules/webpack/bin/webpack",
-    "prod": "npm run webpack -- --env.mode production",
-    "dev": "npm run webpack-dev-server -- --env.mode development --watch --hot",
-    "prod:debug": "npm run debug -- --env.mode production",
-    "dev:debug": "npm run debug -- --env.mode development"
+    "prod": "npm run webpack --env.production",
+    "dev": "npm run webpack-dev-server --env.development --watch --hot",
+    "prod:debug": "npm run debug --env.production",
+    "dev:debug": "npm run debug --env.development"
   },
   "author": "Andrey Alekseev",
   "license": "ISC",
