Fonts are resolved

--- a/menu/tsconfig.json
+++ b/menu/tsconfig.json
@@ -29,7 +29,9 @@
       "Extentions": ["extentions"],
       "Images": ["images"],
       "Reducers": ["reducers"],
-      "Screens": ["screens"]
+      "Screens": ["screens"],
+      "Styles": ["styles"],
+      "Utils": ["utils"]
     }
   },
   "include": [
