--- a/menu/package.json
+++ b/menu/package.json
@@ -22,18 +22,21 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-typescript": "^7.0.0-alpha.19",
+    "cross-env": "^6.0.3",
     "css-loader": "^3.2.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-root-plugin": "^0.10.0",
     "install": "^0.12.2",
     "json-loader": "^0.5.7",
+    "mini-css-extract-plugin": "^0.8.0",
     "npm": "^6.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.2",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
+    "style-loader": "^1.0.0",
     "styled-components": "^4.2.0",
     "ts-loader": "^6.2.0",
     "typescript": "^3.4.4",
