--- a/menu/package.json
+++ b/menu/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.2",
+    "@types/react-router-dom": "^5.1.2",
     "@types/styled-components": "^4.1.18",
     "@types/webpack-env": "^1.14.0",
     "babel": "^6.23.0",
@@ -35,6 +36,7 @@
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.2",
     "react-router-dom": "^5.0.0",
+    "react-svg-loader": "^3.0.3",
     "redux": "^4.0.1",
     "style-loader": "^1.0.0",
     "styled-components": "^4.2.0",
